test/tests/errors/error-rhv-assign.sm
// true
// false
/**/
/**/

program {
    proc x(y) {
        output y;
    }
    var y = 7;
    y = x;
}